@startuml

title __SERVICES's Class Diagram__\n

  namespace com.example.demo {
    namespace services {
      class com.example.demo.services.CountryService {
          + CountryService()
          + createAndSaveCountry()
          + getCountryById()
      }
    }
  }
  

  namespace com.example.demo {
    namespace services {
      class com.example.demo.services.GroupService {
          + GroupService()
          + addAdminToGroup()
          + createAndSaveGroup()
          + findAll()
          + findById()
          + findByName()
          + getAdministrators()
          + removeAdminFromGroup()
      }
    }
  }
  

  namespace com.example.demo {
    namespace services {
      class com.example.demo.services.PersonService {
          + PersonService()
          + addAddressToPerson()
          + createAndSavePerson()
          + findAll()
          + findById()
          + findByLastName()
          + getAddresses()
      }
    }
  }
  

  namespace com.example.demo {
    namespace services {
      class com.example.demo.services.RoleService {
          + RoleService()
          + createAndSaveRole()
      }
    }
  }
  

  com.example.demo.services.CountryService o-- com.example.demo.domain.factories.ICountryFactory : countryFactory
  com.example.demo.services.CountryService o-- com.example.demo.repositories.CountryRepository : countryRepository
  com.example.demo.services.GroupService o-- com.example.demo.DTO.assemblers.GroupDomainDTOAssembler : groupAssembler
  com.example.demo.services.GroupService o-- com.example.demo.repositories.GroupRepository : groupRepository
  com.example.demo.services.GroupService o-- com.example.demo.repositories.PersonRepository : personRepository
  com.example.demo.services.PersonService o-- com.example.demo.repositories.CountryRepository : countryRepository
  com.example.demo.services.PersonService o-- com.example.demo.DTO.assemblers.PersonDomainDTOAssembler : personAssembler
  com.example.demo.services.PersonService o-- com.example.demo.repositories.PersonRepository : personRepository
  com.example.demo.services.RoleService o-- com.example.demo.repositories.RoleRepository : roleRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
